@@ -475,7 +475,7 @@
                         <property name="top_padding">6</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkVBox" id="vbox_photosources">
+                          <object class="GtkVBox" id="vbox_feedsources">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="spacing">10</property>
@@ -486,7 +486,7 @@
                                 <property name="hscrollbar_policy">never</property>
                                 <property name="shadow_type">etched-in</property>
                                 <child>
-                                  <object class="GtkTreeView" id="treeview1">
+                                  <object class="GtkTreeView" id="feedsourcetreeview">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="has_tooltip">True</property>
@@ -497,27 +497,6 @@
                                     <signal name="query-tooltip" handler="on_treeview1_query_tooltip" swapped="no"/>
                                     <child internal-child="selection">
                                       <object class="GtkTreeSelection" id="treeview-selection2"/>
-                                    </child>
-                                    <child>
-                                      <object class="GtkTreeViewColumn" id="treeviewcolumn_source">
-                                        <property name="resizable">True</property>
-                                        <property name="title" translatable="yes">Source</property>
-                                        <property name="reorderable">True</property>
-                                        <property name="sort_indicator">True</property>
-                                        <property name="sort_column_id">1</property>
-                                        <child>
-                                          <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf2"/>
-                                          <attributes>
-                                            <attribute name="pixbuf">0</attribute>
-                                          </attributes>
-                                        </child>
-                                        <child>
-                                          <object class="GtkCellRendererText" id="cellrenderertext3"/>
-                                          <attributes>
-                                            <attribute name="text">1</attribute>
-                                          </attributes>
-                                        </child>
-                                      </object>
                                     </child>
                                     <child>
                                       <object class="GtkTreeViewColumn" id="treeviewcolumn_target">
@@ -555,21 +534,6 @@
                                           </object>
                                           <attributes>
                                             <attribute name="text">3</attribute>
-                                          </attributes>
-                                        </child>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="GtkTreeViewColumn" id="treeviewcolumn_weight">
-                                        <property name="resizable">True</property>
-                                        <property name="title" translatable="yes">Weight</property>
-                                        <property name="reorderable">True</property>
-                                        <property name="sort_indicator">True</property>
-                                        <property name="sort_column_id">4</property>
-                                        <child>
-                                          <object class="GtkCellRendererText" id="cellrenderertext6"/>
-                                          <attributes>
-                                            <attribute name="text">4</attribute>
                                           </attributes>
                                         </child>
                                       </object>
