@@ -1,3 +1,8 @@
+2012-01-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* preferences/*, share/feedsource.glade: Added feed source
+	  dialogs.
+
 2012-01-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* twitter/api.py: Added support for reconnecting lost feed
